--- a/packages/sunrise-cesium-utils/demo/index.html
+++ b/packages/sunrise-cesium-utils/demo/index.html
@@ -63,7 +63,7 @@
     <div class="container">
       <header>
         <h1>Cesium 工具库测试</h1>
-        <p>测试相机控制</p>
+        <p>测试坐标转换、相机控制</p>
       </header>
 
       <div class="content">
@@ -76,6 +76,11 @@
               <p>测试相机飞行、跳转、获取当前位置等相机控制功能。</p>
               <a href="camera-test.html" class="btn">开始测试</a>
             </div>
+            <div class="feature-card">
+              <h3>坐标转换工具</h3>
+              <p>测试经纬度与笛卡尔坐标之间的转换，计算两点距离等功能。</p>
+              <a href="coordinate-test.html" class="btn">开始测试</a>
+            </div>
           </div>
         </div>
 
@@ -86,7 +91,10 @@
               <strong>CameraUtils</strong>: 相机控制工具 -
               提供相机飞行、跳转、位置获取等功能
             </p>
-            <p></p>
+            <p>
+              <strong>CoordinateUtils</strong>: 坐标转换工具 -
+              提供经纬度与笛卡尔坐标的相互转换，距离计算等功能
+            </p>
           </div>
         </div>
       </div>
