feat: 新增模型管理工具及相关功能，更新文档和测试页面

--- a/packages/sunrise-cesium-utils/demo/index.html
+++ b/packages/sunrise-cesium-utils/demo/index.html
@@ -5,11 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cesium 工具库测试</title>
     <link rel="stylesheet" href="css/style.css" />
-    <script src="https://cesium.com/downloads/cesiumjs/releases/1.109/Build/Cesium/Cesium.js"></script>
-    <link
-      href="https://cesium.com/downloads/cesiumjs/releases/1.109/Build/Cesium/Widgets/widgets.css"
-      rel="stylesheet"
-    />
     <style>
       .feature-grid {
         display: grid;
@@ -63,7 +58,7 @@
     <div class="container">
       <header>
         <h1>Cesium 工具库测试</h1>
-        <p>测试坐标转换、相机控制、屏幕坐标</p>
+        <p>测试坐标转换、相机控制、模型管理和屏幕坐标处理功能</p>
       </header>
 
       <div class="content">
@@ -72,15 +67,23 @@
 
           <div class="feature-grid">
             <div class="feature-card">
-              <h3>相机控制工具</h3>
-              <p>测试相机飞行、跳转、获取当前位置等相机控制功能。</p>
-              <a href="camera-test.html" class="btn">开始测试</a>
-            </div>
-            <div class="feature-card">
               <h3>坐标转换工具</h3>
               <p>测试经纬度与笛卡尔坐标之间的转换，计算两点距离等功能。</p>
               <a href="coordinate-test.html" class="btn">开始测试</a>
             </div>
+
+            <div class="feature-card">
+              <h3>相机控制工具</h3>
+              <p>测试相机飞行、跳转、获取当前位置等相机控制功能。</p>
+              <a href="camera-test.html" class="btn">开始测试</a>
+            </div>
+
+            <div class="feature-card">
+              <h3>模型管理工具</h3>
+              <p>测试模型位置计算、查找、可见性控制等模型管理功能。</p>
+              <a href="model-test.html" class="btn">开始测试</a>
+            </div>
+
             <div class="feature-card">
               <h3>屏幕坐标工具</h3>
               <p>测试屏幕坐标与经纬度的相互转换，实体选择等功能。</p>
@@ -93,12 +96,16 @@
           <h2 class="section-title">工具函数信息</h2>
           <div class="result">
             <p>
+              <strong>CoordinateUtils</strong>: 坐标转换工具 -
+              提供经纬度与笛卡尔坐标的相互转换，距离计算等功能
+            </p>
+            <p>
               <strong>CameraUtils</strong>: 相机控制工具 -
               提供相机飞行、跳转、位置获取等功能
             </p>
             <p>
-              <strong>CoordinateUtils</strong>: 坐标转换工具 -
-              提供经纬度与笛卡尔坐标的相互转换，距离计算等功能
+              <strong>ModelUtils</strong>: 模型管理工具 -
+              提供模型位置计算、查找、可见性控制等功能
             </p>
             <p>
               <strong>ScreenUtils</strong>: 屏幕坐标工具 -
